--- a/modern.css
+++ b/modern.css
@@ -176,6 +176,11 @@ body {
 }
 
 @media (max-width: 500px) {
+
+  #chat .toggle-content .thumb {
+    min-height: 66px;
+  }
+
   #form #submit,
   #form #upload {
     font-size: 18px;
